--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="main">
         <div class="title-bar">
-            <h3 class="title">Add Todo</h3>
+            <h3 class="title">Add Item</h3>
         </div>
         <form name="addItem" id="add-todo">
             <label class="label" for="title">Item name</label>
@@ -24,8 +24,24 @@
             <div class="title-bar">
                 <h3 class="title">list of items</h3>
             </div>
+            <hr>
             <ul id="list">
-
+                <li>
+                    <div>milk</div>
+                    <button>edit</button>
+                    <button>X</button>
+                </li>
+                <li>
+                    <div>cherios</div>
+                    <button>edit</button>
+                    <button>X</button>
+                </li>
+                <li>
+                    <div>2 goats</div>
+                    <button>edit</button>
+                    <button>X</button>
+                </li>  
+                <hr>              
             </ul>
         </div>
     </div>
