--- a/CSS Flags/Germany/index.html
+++ b/CSS Flags/Germany/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>France Flag</title>
+    <title>Germany Flag</title>
 </head>
 <body>
-    <div class=blue></div>
-    <div class=white></div>
+    <div class=black></div>
     <div class=red></div>
+    <div class=yellow></div>
 </body>
 </html>
