--- a/CSS Flags/Gambia/index.html
+++ b/CSS Flags/Gambia/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Swedan Flag</title>
+    <title>Gambia Flag</title>
 </head>
 <body>
-    <div class=blue></div>
-    <div class=yellow-vertical></div>
-    <div class=yellow-horizontal></div>
+    <div class=gambia></div>
+        <div class=red></div>
+        <div class=blue></div>
+        <div class=green></div>
+    
 </body>
 </html>
