--- a/CSS Flags/Tonga/index.html
+++ b/CSS Flags/Tonga/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Swedan Flag</title>
+    <title>Tonga Flag</title>
 </head>
 <body>
-    <div class=blue></div>
-    <div class=yellow-vertical></div>
-    <div class=yellow-horizontal></div>
+    <div class=tonga></div>
+        <div class=red></div>
+        <div class=white></div>
+        <div class=red-vertical></div>
+        <div class=red-horizontal></div>
+    
 </body>
 </html>
