added media queries

--- a/Business Time/index.html
+++ b/Business Time/index.html
@@ -10,9 +10,9 @@
     <h1>Sweet Cafe</h1>
     <img src="https://image.freepik.com/free-photo/abstract-blur-interior-coffee-shop-cafe-background_42682-256.jpg"/>
     <div class= flex-container>
-        <div>HOME</div>
-        <div>MENU</div>
-        <div>ABOUT</div>
+        <a href="index.html">HOME</a>
+        <a href="menu.html">MENU</a>
+        <a href="about.html">ABOUT</a>    
     </div>
     <div class=coffee>
         <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbrianroberts%2Ffiles%2F2018%2F03%2Fpexels-photo-302899-1-1200x801.jpg"/>
@@ -24,4 +24,3 @@
 </body>
 </html>
 
-    <!--Sweet Cafe is your neighborhood coffee shop with a flair for the eclectic.  As the longest running independent coffee shop in Las Vegas, we believe in creating an atmosphere that focuses on making friends, drinking good coffee from organic fair trade  single origin farms, and eating vegetarian and vegan foods made from scratch. If you are looking for a place to call your own, look no further - come hang out.>
