--- a/Business Time/menu.html
+++ b/Business Time/menu.html
@@ -12,9 +12,9 @@
     <h1>Sweet Cafe</h1>
     <img src="https://image.freepik.com/free-photo/abstract-blur-interior-coffee-shop-cafe-background_42682-256.jpg"/>
     <div class= flex-container>
-        <div>HOME</div>
-        <div>MENU</div>
-        <div>ABOUT</div>
+        <a href="index.html">HOME</a>
+        <a href="menu.html">MENU</a>
+        <a href="about.html">ABOUT</a>
     </div>
     <div class=coffee>
         <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbrianroberts%2Ffiles%2F2018%2F03%2Fpexels-photo-302899-1-1200x801.jpg"/>
@@ -25,52 +25,56 @@
     
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
-    <ul>LATTES (ESPRESSO + MILK)</ul>
-        <li>NUTELLA</li>
-        <li>MOCHA </li>
-        <li>HAZELNUT</li>
-        <li>VANILLA </li>
-        <li>WHITE MOCHA</li>
-        <li>PUMPKIN SPICE </li>
-        <li> PEPPERMINT MOCHA </li>
-        <li>LAVENDER</li>
-        <li>CARAMEL VANILLA</li>
-    <ul>CLASSICS</ul>
-        <li>CAFE LATTE </li>
-        <li>CAPPUCCINO</li>
-        <li>AMERICANO</li>
-    <ul>MILK ALTERNATIVES</ul>
-        <li>ALMOND MILK </li>
-        <li>OAT MILK </li>
-        <li>BREVE </li>
-        <li>STEAMED MILK</li>
-        <li>SOY MILK</li>
-    <ul>FRAPPE</ul>
-        <li>NUTELLA</li>
-        <li>VANILLA</li>
-        <li>WHITE MOCHA </li>
-        <li>CARAMEL </li>
-        <li>MOCHA</li>
-        <li>MINT MOCHA</li>
-    <ul>HERBAL TEA</ul>
-        <li>HAKUNA</li>
-        <li>PEPPERMINT</li>
-        <li>CHAMOMILE</li>
-        <li>Hibiscus</li>
-    <ul>TEA LATTE</ul>
-        <li>CHAI</li>
-        <li>BLACK</li>
-        <li>JASMINE</li>
-        <li>MATCHA</li>
-        <li>LAVENDER MATCHA</li>
-        <li>DIRTY CHAI (CHAI + ESPRESSO + MILK)</li>
-    <ul>BAKERY</ul>
-        <li>ASSORTED FRESH BAKED MUFFINS</li>
-        <li>CROISSANTS /</li>
-        <li>COOKIES</li>
-        <li>SCONES</li>
-    <a href=""
-
+    <div class="menu1">
+        <ul>LATTES (ESPRESSO + MILK)</ul>
+            <li>NUTELLA</li>
+            <li>MOCHA </li>
+            <li>HAZELNUT</li>
+            <li>VANILLA </li>
+            <li>WHITE MOCHA</li>
+            <li>PUMPKIN SPICE </li>
+            <li> PEPPERMINT MOCHA </li>
+            <li>LAVENDER</li>
+            <li>CARAMEL VANILLA</li>
+        <ul>CLASSICS</ul>
+            <li>CAFE LATTE </li>
+            <li>CAPPUCCINO</li>
+            <li>AMERICANO</li>
+        <ul>MILK ALTERNATIVES</ul>
+            <li>ALMOND MILK </li>
+            <li>OAT MILK </li>
+            <li>BREVE </li>
+            <li>STEAMED MILK</li>
+            <li>SOY MILK</li>
+    </div>
+     <div class="menu2">
+        <ul>FRAPPE</ul>
+            <li>NUTELLA</li>
+            <li>VANILLA</li>
+            <li>WHITE MOCHA </li>
+            <li>CARAMEL </li>
+            <li>MOCHA</li>
+            <li>MINT MOCHA</li>
+        <ul>HERBAL TEA</ul>
+            <li>HAKUNA</li>
+            <li>PEPPERMINT</li>
+            <li>CHAMOMILE</li>
+            <li>HIBISCUS</li>
+        <ul>TEA LATTE</ul>
+            <li>CHAI</li>
+            <li>BLACK</li>
+            <li>JASMINE</li>
+            <li>MATCHA</li>
+            <li>LAVENDER MATCHA</li>
+            <li>DIRTY CHAI (CHAI + ESPRESSO + MILK)</li>
+     </div>
+     <div class="menu3">
+        <ul>BAKERY</ul>
+            <li>ASSORTED FRESH BAKED MUFFINS</li>
+            <li>CROISSANTS /</li>
+            <li>COOKIES</li>
+            <li>SCONES</li>   
+     </div>
         <script src="app.js"></script>
 </body>
 </html>
