First draft of CSS Grid Practice

--- a/Business Time/menu.html
+++ b/Business Time/menu.html
@@ -68,13 +68,13 @@
             <li>LAVENDER MATCHA</li>
             <li>DIRTY CHAI (CHAI + ESPRESSO + MILK)</li>
      </div>
-     <div class="menu3">
+     <span class="menu3">
         <ul>BAKERY</ul>
             <li>ASSORTED FRESH BAKED MUFFINS</li>
             <li>CROISSANTS /</li>
             <li>COOKIES</li>
             <li>SCONES</li>   
-     </div>
+     </span>
         <script src="app.js"></script>
 </body>
 </html>
