--- a/Travel Form/index.html
+++ b/Travel Form/index.html
@@ -3,39 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Travel Form</title>
 </head>
 <body>
-    <h1>Worthy's Destination Airlines</h1>
-    <p>Please fill out the form below</p>
-    <form>
-        <input type="text" placeholder="First Name" name="firstName"/>
+    <!--<img src="https://www.gannett-cdn.com/presto/2019/03/28/USAT/dc4a16bd-c6d5-49b2-97be-2d693d714f85-GettyImages-887546562.jpg" class="image">-->
+    <h1>A Worthy Destination Airlines</h1>
+    <h2>Travel Inquiry Form</h2>
+    <p>Please provide the following information below</p>
+    <form class= "myForm" name= "myForm">
+        Name:<input type="text" placeholder="First Name" id= "firstName" name="firstName"/>
+        <input type="text" placeholder= "Last Name" id= "lastName" name= "lastName"/>
         <br>
-        <input type="text" placeholder= "Last Name" name= "lastName"/>
+        Age:<input type="number" id= "age"/>
         <br>
-        <input type="number" placeholder="Age"/>
+        Male<input type="radio" id= "male" name="gender" value="Male"/>
+        Female<input type="radio" id= "female" name="gender" value="Female"/>
+        Other<input type="radio" id= "other" name="gender" value="Other"/>
         <br>
-        Male<input type="radio" name="male" value="Male"/>
-        Female<input type="radio" name="female" value="Female"/>
-        <br>
-        <select name="location">
+        Select Location<select name="location">
             <option value="New York">New York</option>
             <option value="London">London</option>
             <option value="Italy">Italy</option>
         </select>
         <br>
-       Vegetarian <input type="checkbox" name="diet" value="vegetarian"/>
+       Dietary Options: Vegetarian <input type="checkbox" id= "veg" name="diet" value="Vegetarian"/>
+        Kosher<input type="checkbox" id= "kosher" name="diet" value="Kosher"/>
+        Peanut Allergy<input type="checkbox" id= "peanut" name="diet" value="Peanut Allergy"/>
         <br>
-        Kosher<input type="checkbox" name="diet" value="kosher"/>
-        <br>
-        Peanut Allergy<input type="checkbox" name="diet" value="peanut allergy"/>
         <button id="submit">Submit</button>
     </form>
     <script src="app.js"></script>
 </body>
 </html>
-
-
 
 
 <!--You should collect the following information from the user:
@@ -49,6 +49,4 @@ Whether they have any dietary restrictions (check boxes for vegetarian, kosher, 
 
 Each element of the form should be given a name attribute so you can access the data in JavaScript and do stuff with it.
 
-There should also be a button at the end of the form to submit it. Upon pressing the button, an alert should pop up that looks like this:
-
--->
+There should also be a button at the end of the form to submit it. Upon pressing the button, an alert should pop up -->
