--- a/CSS Zen Garden /index.html
+++ b/CSS Zen Garden /index.html
@@ -21,50 +21,48 @@
         <div class="enlightenment">
             <p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
             <p>Download the example HTML FILE and CSS FILE</p>
-            <p>THE ROAD TO ENLIGHTENMENT</p>
-            <p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible DOMs, broken CSS support, and abandoned browsers.
-
-                We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the W3C, WASP, and the major browser creators.
-                
-                The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
-            <p>SO WHAT IS THIS ABOUT?</p>
-            <p>There is a continuing need to show the power of CSS. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The HTML remains the same, the only thing that has changed is the external CSS file. Yes, really.
-
-                CSS allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
+            <h2>THE ROAD TO ENLIGHTENMENT</h2>
+            <p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible DOMs, broken CSS support, and abandoned browsers.</P>
+            <p>We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the W3C, WASP, and the major browser creators.</p>
+            <p>The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
+            <h2>SO WHAT IS THIS ABOUT?</h2>
+            <p>There is a continuing need to show the power of CSS. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The HTML remains the same, the only thing that has changed is the external CSS file. Yes, really.</p>
+            <p>CSS allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
         </div>
         <div class="authors">
-            <p>MID CENTURY MODERN</p>
+            <h3>MID CENTURY MODERN</h3>
             <p>by Andrew Lohman</p>
-            <p>GARMENTS</p>
+            <h3>GARMENTS</h3>
             <p>by Dan Mall</p>
-            <p>APOTHECARY</p>
+            <h3>APOTHECARY</h3>
             <p>by Trent Walton</p>
-            <p>SCREEN FILLER</p>
+            <h3>SCREEN FILLER</h3>
             <p>by Elliot Jay Stocks</p>
-            <p>FOUNTAIN KISS</p>
+            <h3>FOUNTAIN KISS</h3>
             <p>by Jeremy Carlson</p>
-            <p>A ROBOT NAMED JIMMY</p>
+            <h3>A ROBOT NAMED JIMMY</h3>
             <p>by meltmedia</p>
-            <p>VERDE MODERNA</p>
+            <h3>VERDE MODERNA</h3>
             <p>by Dave Shea</p>
         </div>
         <div class="participation">
-            <p>PARTICIPATION</p>
+            <h2>PARTICIPATION</h2>
             <p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.</p>
             <p>You may modify the style sheet in any way you wish, but not the HTML. This may seem daunting at first if you’ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
             <p>Download the sample HTML and CSS to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your CSS file to a web server under your control. Send us a link to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
-            <p>BENEFITS</p>
+            <br>
+            <h2>BENEFITS</h2>
             <p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.</p>
         </div>
         <div class="links">
-            <p>VIEW THIS DESIGN’S CSS</p>
-            <p>CSS RESOURCES</p>
-            <p>FAQ</p>
-            <p>SUBMIT A DESIGN</p>
-            <p>TRANSLATIONS</p>
+            <h2>VIEW THIS DESIGN’S CSS</h2>
+            <h2 >CSS RESOURCES</h2>
+            <h2>FAQ</h2>
+            <h2>SUBMIT A DESIGN</h2>
+            <h2>TRANSLATIONS</h2>
         </div>
         <div class="requirements">
-            <p>REQUIREMENTS</p>
+            <h2>REQUIREMENTS</h2>
             <p>Where possible, we would like to see mostly CSS 1 & 2 usage. CSS 3 & 4 should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your CSS validates.</p>
             <p>Luckily, designing this way shows how well various browsers have implemented CSS by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
             <p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>
@@ -72,11 +70,13 @@
         </div>
         <div class="empty"></div>
         <div class="footer1">
-            <p>By Dave Shea.Bandwidth graciously donated by mediatemple. Now available: Zen Garden, the book.</p>
+            <h1>By Dave Shea.Bandwidth graciously donated by mediatemple. Now available: Zen Garden, the book.</h1>
         </div>
         <div class="footer2">
             <div class="icons">
-                <div></div>
+                <div>
+                    <a href="http://validator.w3.org/check/referer" title="Check the validity of this site&#8217;s HTML" class="zen-validate-html">HTML</a>
+                </div>
                 <div></div>
                 <div></div>
                 <div></div>
