--- a/Axios Todo Project/index.html
+++ b/Axios Todo Project/index.html
@@ -6,8 +6,18 @@
     <title>Axios Todo Project</title>
 </head>
 <body>
-    <div id="todo"></div>
-    <script src="app.js"></script>
+    <div id="todo">
+        <form name="todoForm">
+            <input name="title" placeholder="Title"/>
+            <input name="price" placeholder="Price"/>
+            <input name="description" placeholder="Description"/>
+            <input name="imgUrl" placeholder="Image Url"/>
+            <button>Submit</button>
+        </form>
+    </div>
+    <ul id="list">
+    </ul>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
